--- a/styleguide/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/styleguide/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -1,26 +1,14 @@
 <ul class="sg-colors">
 	<li>
-		<span class="sg-swatch"></span>
-		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
+		<span class="sg-swatch red"></span>
+		<span class="sg-label">$red<br>rgb(186,37,71);<br>#ba2547</span>
 	</li>
 	<li>
-		<span class="sg-swatch"></span>
-		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
+		<span class="sg-swatch blue"></span>
+		<span class="sg-label">$blue<br>rgb(33,88,155);<br>#21589b</span>
 	</li>
 	<li>
-		<span class="sg-swatch"></span>
-		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
+		<span class="sg-swatch tan"></span>
+		<span class="sg-label">$tan<br>rgb(178,135,84);<br>#b28754</span>
 	</li>
-	<li>
-		<span class="sg-swatch"></span>
-		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
-	</li>
-	<li>
-		<span class="sg-swatch"></span>
-		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
-	</li>
-	<li>
-		<span class="sg-swatch"></span>
-		<span class="sg-label">TBD<br>$color<br>rgb();<br>hex#</span>
-	</li>
-</ul>
+</ul> 
