--- a/styleguide/source/_patterns/01-molecules/01-text/00-contact-info.mustache
+++ b/styleguide/source/_patterns/01-molecules/01-text/00-contact-info.mustache
@@ -1,4 +1,4 @@
 <div class="contact-info">
-	<p class="phone">{{ contact.phone }}</p>
+	{{>atoms-phone}}
 	<p class="address">{{ contact.address1 }}<br>{{ contact.address2 }}</p>
 </div>
