--- a/styleguide/source/_patterns/01-molecules/05-navigation/00-main-nav.mustache
+++ b/styleguide/source/_patterns/01-molecules/05-navigation/00-main-nav.mustache
@@ -9,7 +9,7 @@
         <li><a href="{{ url }}" id="news-events">News &amp; Events</a></li>
         <li><a href="{{ url }}" id="online-pharmacy">Online Pharmacy</a></li>
         <li><a href="{{ url }}" id="contact-us">Contact Us</a></li>
-        <li><a href="{{ url }}" id="search" class="fa fa-search"></a></li>
+        <li id="search"><a href="{{ url }}" class="fa fa-search"></a></li>
     </ul>
     {{>molecules-inline-form}}
 </nav>
