--- a/styleguide/source/_patterns/01-molecules/06-highlight-boxes/00-highlight-box-homepage.mustache
+++ b/styleguide/source/_patterns/01-molecules/06-highlight-boxes/00-highlight-box-homepage.mustache
@@ -8,5 +8,5 @@
 		<li><a href="#">Prescription Refill Form</a></li>
 		<li><a href="#">Frequently Asked Questions</a></li>
 	</ul>
-	<p><a href="{{url}}" class="button-link">Recent News and Upcoming Events</a></p>
+	<p><a href="{{url}}" class="button-link-arrow">Recent News and Upcoming Events</a></p>
 </div>
