--- a/styleguide/source/_patterns/01-molecules/07-sidebars/04-sidebar-doctor-nav.mustache
+++ b/styleguide/source/_patterns/01-molecules/07-sidebars/04-sidebar-doctor-nav.mustache
@@ -1,5 +1,7 @@
 <article class="sidebar-article sidebar-nav">
-	<h3>(Specialty) Doctors</h3>
+	<div class="sidebar-article-title">
+		<h3>Doctors</h3>
+	</div>
 	<ul>
 		{{# listItems.five}}
 			<li><a href="#">{{>molecules-doctor-name-title}}</a></li>
