--- a/styleguide/source/_patterns/01-molecules/07-sidebars/06-sidebar-appointment-times.mustache
+++ b/styleguide/source/_patterns/01-molecules/07-sidebars/06-sidebar-appointment-times.mustache
@@ -1,4 +1,6 @@
 <article class="sidebar-article appointment-times">
-	<h3>Appointment Times</h3>
+	<div class="sidebar-article-title">
+		<h3>Appointments</h3>
+	</div>
 	<p>{{day.name}} {{hour.short}}{{hour.ampm}}–{{hour.short}}{{hour.ampm}}</p>		
 </article>
