--- a/styleguide/source/_patterns/01-molecules/08-footer-features/01-did-you-know.mustache
+++ b/styleguide/source/_patterns/01-molecules/08-footer-features/01-did-you-know.mustache
@@ -1,9 +1,11 @@
-<div class="spotlight did-you-know">
-	<h3>Did You Know?</h3>
-	<div class="box">
-		{{>atoms-image-square}}
-		<div class="spotlight-text">
-			<p>Did you know that we also treat small animals like rabbits, ferrets, and hamsters? <a href="{{url}}">Read more...</a></p>
-		</div>			
+<div class="footer-feature did-you-know">
+	<div class="footer-feature-title">
+		<h3>Did You Know?</h3>
 	</div>
+	<div class="footer-feature-photo">
+		{{>atoms-image-square}}
+	</div>
+	<div class="footer-feature-text">
+		<p>Did you know that we also treat small animals like rabbits, ferrets, and hamsters? <a href="{{url}}">Read more...</a></p>
+	</div>			
 </div>
