--- a/styleguide/source/_patterns/01-molecules/08-footer-features/02-featured-pet.mustache
+++ b/styleguide/source/_patterns/01-molecules/08-footer-features/02-featured-pet.mustache
@@ -1,7 +1,11 @@
-<div class="featured-pet">
-	<h3>Pet of the Month</h3>
-	{{>atoms-image-circle}}
-	<div class="spotlight-text">
+<div class="footer-feature featured-pet">
+	<div class="footer-feature-title">
+		<h3>Pet of the Month</h3>
+	</div>
+	<div class="footer-feature-photo">
+		{{>atoms-image-circle}}
+	</div>
+	<div class="footer-feature-text">
 		<h4>Tanner</h4>
 		<p>15 month old mixed breed. <a href="{{url}}">Read Tanner’s story...</a></p>
 	</div>
