--- a/styleguide/source/_patterns/01-molecules/08-footer-features/03-previously-featured-pets.mustache
+++ b/styleguide/source/_patterns/01-molecules/08-footer-features/03-previously-featured-pets.mustache
@@ -1,6 +1,5 @@
 <div class="previously-featured-pets">
-	<h3>Previously Featured Pets</h3>
-	{{# listItems.eight }} <!-- repeats a pattern a given # of times -->
+	{{# listItems.six }} 
 		<a href="{{url}}">{{>atoms-image-circle}}</a>
-	{{/ listItems.eight }}	
+	{{/ listItems.six }}	
 </div>
