--- a/styleguide/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/styleguide/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -4,7 +4,7 @@
 		{{>molecules-footer-nav}}
 		<div class="footer-contact">
 			{{>molecules-social-media}}
-			{{>molecules-contact-info}}
+			{{>atoms-phone}}
 		</div>
 	</div>
 	<p class="backtotop"><a href="#"><i class="fa fa-chevron-up"></i>Back to top</a></p>
