--- a/styleguide/source/css/patterns/_links.scss
+++ b/styleguide/source/css/patterns/_links.scss
@@ -1,10 +1,41 @@
 a {
   @include link;
+}
 
-  &.button-link {
-    @include button;
-    display: inline-block;
-    margin: 0;
+.button-link {
+  @include button;
+  display: inline-block;
+  margin: 0;
+}
+
+.button-link-arrow {
+  @extend .button-link; 
+  position: relative;
+  padding-left: $form-padding*6;
+
+  &:before {
+    content: "\f178";
+    font-family: "FontAwesome";
+    background-color: $link-color;
+    color: white;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    padding: $form-padding $form-padding*1.5;
+  }
+
+  &:hover, &:focus {
+    &:before {
+      background-color: $link-color-hover;
+    }
+  }
+}
+
+
+p {
+  a {
+    text-decoration: underline;
   }
 }
 
