--- a/styleguide/source/_patterns/01-molecules/07-sidebars/00-sidebar-article.mustache
+++ b/styleguide/source/_patterns/01-molecules/07-sidebars/00-sidebar-article.mustache
@@ -1,4 +1,6 @@
 <article class="sidebar-article">
-    <h3>{{ sidebar.title }}</h3>
+	<div class="sidebar-article-title">
+	    <h3>{{ sidebar.title }}</h3>
+	</div>
     {{>atoms-paragraph}}
 </article>
