--- a/styleguide/source/_patterns/01-molecules/07-sidebars/01-sidebar-nav.mustache
+++ b/styleguide/source/_patterns/01-molecules/07-sidebars/01-sidebar-nav.mustache
@@ -1,4 +1,6 @@
 <article class="sidebar-article sidebar-nav">
-	<h3>Site Section</h3>
+	<div class="sidebar-article-title">
+		<h3>Site Section</h3>
+	</div>
 	{{>molecules-secondary-nav}}		
 </article>
