--- a/styleguide/source/_patterns/01-molecules/07-sidebars/02-sidebar-form.mustache
+++ b/styleguide/source/_patterns/01-molecules/07-sidebars/02-sidebar-form.mustache
@@ -1,5 +1,7 @@
 <article class="sidebar-article sidebar-form">
-	<h3>Join Mailing List</h3>
+	<div class="sidebar-article-title">
+		<h3>Join Mailing List</h3>
+	</div>
 	<p>{{excerpt.short}}</p>
 	{{>molecules-inline-form}}		
 </article>
