--- a/styleguide/source/_patterns/01-molecules/07-sidebars/02-sidebar-select.mustache
+++ b/styleguide/source/_patterns/01-molecules/07-sidebars/02-sidebar-select.mustache
@@ -1,4 +1,6 @@
 <article class="sidebar-article sidebar-select">
-	<h3>Archives</h3>
+	<div class="sidebar-article-title">
+		<h3>Archives</h3>
+	</div>
 	{{>atoms-select-menu}}		
 </article>
