--- a/styleguide/source/_patterns/01-molecules/07-sidebars/03-sidebar-specialties.mustache
+++ b/styleguide/source/_patterns/01-molecules/07-sidebars/03-sidebar-specialties.mustache
@@ -1,4 +1,6 @@
 <article class="sidebar-article specialties">
-	<h3>Specialties</h3>
+	<div class="sidebar-article-title">
+		<h3>Specialties</h3>
+	</div>
 	{{>molecules-secondary-nav}}		
 </article>
