--- a/styleguide/source/_patterns/01-molecules/08-footer-features/00-specialty-spotlight.mustache
+++ b/styleguide/source/_patterns/01-molecules/08-footer-features/00-specialty-spotlight.mustache
@@ -1,10 +1,12 @@
-<div class="spotlight specialty">
-	<h3>Specialty Spotlight</h3>
-	<div class="box">
+<div class="footer-feature specialty">
+	<div class="footer-feature-title">
+		<h3>Specialty Spotlight</h3>
+	</div>
+	<div class="footer-feature-photo">
 		{{>atoms-image-square}}
-		<div class="spotlight-text">
-			<h4>Oncology</h4>
-			<p>Introductory text about featured service. <a href="{{url}}">Read more...</a></p>
-		</div>
+	</div>
+	<div class="footer-feature-text">
+		<h4>Oncology</h4>
+		<p>Introductory text about featured service. <a href="{{url}}">Read more...</a></p>
 	</div>
 </div>
