--- a/styleguide/source/_patterns/02-organisms/00-global/02-footer-features.mustache
+++ b/styleguide/source/_patterns/02-organisms/00-global/02-footer-features.mustache
@@ -1,7 +1,7 @@
 <section class="footer-features">
 	<div class="container">
-		{{>molecules-did-you-know}}
+		{{>molecules-specialty-spotlight}}
 		{{>molecules-featured-pet}}
-		{{>molecules-previously-featured-pets}}
+	<!-- {{>molecules-previously-featured-pets}} -->
 	</div>
 </section>
