--- a/styleguide/source/_patterns/02-organisms/03-carousels/00-homepage-carousel.mustache
+++ b/styleguide/source/_patterns/02-organisms/03-carousels/00-homepage-carousel.mustache
@@ -1,1 +1,1 @@
-<img src="../../img/homepage-carousel-temp.png" class="homepage-carousel" alt="" />
+<img src="../../img/homepage-carousel-temp.jpg" class="homepage-carousel" alt="" />
