--- a/styleguide/source/css/lib/_fonts.scss
+++ b/styleguide/source/css/lib/_fonts.scss
@@ -4,4 +4,5 @@ Embed custom fonts here
 ////////////////////////////////////////////////////////////////////////////
 */
 
-
+@import url(http://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
