--- a/styleguide/source/css/patterns/_forms.scss
+++ b/styleguide/source/css/patterns/_forms.scss
@@ -14,6 +14,7 @@ input[type=submit] {
 
 *[type="submit"], *.submit {
   @include button-form;
+  @include paragraph;
   @include box-sizing(border-box);
   float: left;
 
