improve double border style

--- a/styleguide/source/css/lib/_general-mixins.scss
+++ b/styleguide/source/css/lib/_general-mixins.scss
@@ -61,10 +61,10 @@
     content: "";
     position: absolute;
     z-index: 1;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    left: -1px;
     border: $width solid $color;
   }
 }
